tests/typing/errors/bad_index_arity/float.expected
File "tests/typing/errors/bad_index_arity/float.smt2", line 3, character 13-28:
3 | (assert (= x ((_ to_fp 3) 0)))
                 ^^^^^^^^^^^^^^^
Error The indexed family of operators 'to_fp' expects 2 indexes, but was given 1
